[gd_scene load_steps=3 format=3 uid="uid://b8st208bgnx67"]

[ext_resource type="Script" uid="uid://cqbn88tttdwmk" path="res://Personaje/ufos.gd" id="1_ftgf7"]
[ext_resource type="PackedScene" uid="uid://bvgav5q2y8jbw" path="res://Personaje/grupos.tscn" id="7_2kwpi"]

[node name="UFOs" type="Node2D"]
script = ExtResource("1_ftgf7")

[node name="Grupos" parent="." instance=ExtResource("7_2kwpi")]

[node name="Grupos2" parent="." instance=ExtResource("7_2kwpi")]
position = Vector2(-128, -128)

[node name="Grupos3" parent="." instance=ExtResource("7_2kwpi")]
position = Vector2(-64, -256)

[node name="Grupos4" parent="." instance=ExtResource("7_2kwpi")]
position = Vector2(-192, -384)

[connection signal="punt_total" from="Grupos" to="." method="_on_grupos_punt_total"]
[connection signal="punt_total" from="Grupos2" to="." method="_on_grupos_2_punt_total"]
[connection signal="punt_total" from="Grupos3" to="." method="_on_grupos_3_punt_total"]
[connection signal="punt_total" from="Grupos4" to="." method="_on_grupos_4_punt_total"]
